# Echo

./: .gitignore  AGENTS.md  CLAUDE.md  Status.md  features.json  开发文档.md  开发步骤.md  需求文档.md
backend/: .env.example  README.md  pyproject.toml  schema.sql
backend/src/: schema.sql
backend/src/echo/: asr.py  auth.py  cli.py  db.py  lectures.py  main.py  middleware.py  models.py  storage.py  tasks.py  translate.py  utterances.py  ws.py
frontend/: README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  i18n.ts  index.css  main.tsx
frontend/src/components/: LanguageSwitcher.tsx
frontend/src/utils/: audio.ts  ws.ts
frontend/src/views/: DashboardView.tsx  LectureDetailView.tsx  LoginView.tsx
tmp/: index.js  m0_frontend_features.json
