[project]
name = "echo-backend"
version = "0.1.0"
description = "Lecture subtitles/summaries backend (FastAPI + Whisper/Baidu/DeepSeek)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "psycopg[binary]>=3.1.0",
    "httpx>=0.27.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
]

[tool.uv]
index-url = "https://pypi.org/simple"

[tool.uv.sources]

[tool.hatch.build.targets.wheel]
packages = ["src/echo"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
